# viralgraphics.io

./: .gitignore  3dsample.html  HOWTO.md  LICENSE  README.md  addressbook.html  ide.html  vglib.min.js
apps/: 3dsample.vide  addressbook.vide  v-ide.vide
apps/nodes/: backgroundrender.js  main.js  nodes.html  nodes.vg  nodes.vide
apps/nodes/dockwidgets/: projectdockwidget.js
apps/vide/: vide.html  vide.vide
common/: README.md
common/debug/: file.js
common/ui/: browserdockwidget.js  communitylistwidget.js  dialogs.js  iconstrip.js  materiallistwidget.js  mzmateriallistwidget.js  nodemateriallistwidget.js  subscriptiondockwidget.js
docs/: CNAME  README.md  RichText.Editor.html  RichText.ElementManager.html  UI_vg-defines.js.html  UI_vg-dockwidget.js.html  UI_vg-htmlview.js.html  UI_vg-layout.js.html  UI_vg-listwidget.js.html  UI_vg-textwidgets.js.html  UI_vg-treewidget.js.html  UI_vg-widgets.js.html  UI_vg-window.js.html  UI_vg-workspace.js.html  VG.Canvas.html  VG.Controller.Array.html  VG.Controller.Base.html  VG.Controller.Tree.html  VG.Controller.html  VG.Core.Color.html  VG.Core.Image.html  VG.Core.ImagePool.html  VG.Core.Margin.html  VG.Core.Material.html  VG.Core.NormalizedColor.html  VG.Core.Point.html  VG.Core.Rect.html  VG.Core.Size.html  VG.Core.Timer.html  VG.Core.TypedArray.html  VG.Core.html  VG.Data.Base.html  VG.Data.Collection.html  VG.Data.UndoItem.html  VG.Data.html  VG.Events.MouseDownEvent.html  VG.Events.MouseMoveEvent.html  VG.Events.MouseUpEvent.html  VG.Events.html  VG.Font.Font.html  (+126 more)
docs/in/: README.md
docs/in/tutorials/: Layouts.md  Widget Basics.md  Workspace.md
docs/tutorials/: Data Model.md  Workspace.md
examples/: README.md
examples/addressbook/: addressbook.html  addressbook.js  addressbook.vg  addressbook.vide
examples/cornellbox/: cornellbox.html  cornellbox.js  cornellbox.vg  cornellbox.vide  cornellbox_vg.html
examples/demo/: demo.html  demo.vg  demo.vide  dock.js  editor.js  main.js
examples/gamesample/: gamesample.html  gamesample.js  gamesample.vg  gamesample.vide
examples/helloworld/: helloworld.html  helloworld.js  helloworld.vg  helloworld.vide
examples/imagelist/: imagelist.html  imagelist.js
examples/mtl-demo/: mtl-demo.html  mtl-demo.js  mtl-demo.vg  mtl-demo.vide
examples/nodes/: nodes.html  nodes.js
examples/shadertunnel/: shadertunnel.html  shadertunnel.js  shadertunnel.vg  shadertunnel.vide
examples/visualsnake/: visualsnake.html  visualsnake.js
examples/widgets/: widgets.html  widgets.js  widgets_examples.js
fonts/: visualgraphics_regular.typeface.js
fonts/open_sans/: open_sans_bold.typeface.js  open_sans_semibold.typeface.js  open_sans_semibold_italic.typeface.js
fonts/roboto/: roboto_regular.typeface.js
nodejs/: Developing.md  README.md  conf.json  vgbuild.index  vgbuild.js  vgmake.js
nodejs/viralgraphics.io/: README.md  index.js  package.json
nodejs/viralgraphics.io/public/: viralgraphics.html  viralgraphics.js
nodejs/viralgraphics.io/test/: main.js  test.html
sdl2_host/: .gitignore  CMakeLists.txt  README.md  base64.cpp  base64.h  files_unix.cpp  gl.hpp  gpubuffer.cpp  gpubuffer.hpp  image_loader.cpp  image_loader.hpp  image_saver.cpp  image_saver.hpp  jshost.cpp  jshost.hpp  jshost_funcs.cpp  jshost_funcs_cocoa.m  jshost_funcs_utils.cpp  main.cpp  rendertarget.cpp  rendertarget.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
sdl2_host/cmake/: FindOpenGL.cmake  FindSDL2.cmake  FindV8.cmake
sdl2_host/tracer/: default.h  light.cpp  light.h  material.cpp  material.h  mesh.cpp  mesh.h  scene.cpp  scene.h  tracer.cpp  tracer.h  util.cpp  util.h
sdl2_host/tracer/api/: scene.h  scene_flat.h
sdl2_host/tracer/brdfs/: brdf.h  compositedbrdf.h  vgbrdf.h  vgcomposite.h  vgdissolve.h  vgglass.h  vgmirror.h  vgphong.h
sdl2_host/tracer/common/math/: color_sse.h
sdl2_host/tracer/common/sys/: intrinsics.h  taskscheduler.h
sdl2_host/tracer/common/sys/stl/: vector.h
sdl2_host/tracer/integrators/: pathintegrator.cpp  pathintegrator.h  pathtraceintegrator.cpp  whittedintegrator.cpp  whittedintegrator.h
sdl2_host/tracer/materials/: material.h  matte.h  vgmat.h
sdl2_host/tracer/renderers/: camera.h  debugrenderer.cpp  debugrenderer.h  integratorrenderer.cpp  integratorrenderer.h  progress.cpp  progress.h  ray.h  renderer.h
sdl2_host/tracer/samplers/: distribution1d.cpp
sdl2_host/tracer/shapes/: disk.h  shape.h  sphere.h  triangle.h  trianglemesh_full.h  trianglemesh_normals.h
slate/source/: index.html.md
slate/source/javascripts/: index.html.md
vglib/: vg-canvas.js  vg-canvas2d.js  vg-controller.js  vg-core.js  vg-data.js  vg-defines.js  vg-docs.js  vg-events.js  vg-font.js  vg-fs.js  vg-math.js  vg-renderer.js  vg-sax.js  vg-shortcut.js  vg-svg.js  vg-undo.js  vglib_a.js
vglib/db/: vg-db.js  vg-folder.js
vglib/nodes/: vg-controller.js  vg-generators.js  vg-graph.js  vg-graphedit.js  vg-material.js  vg-materialedit.js  vg-materialwidget.js  vg-node.js  vg-nodes.js  vg-noise.js  vg-operators.js  vg-parameter.js  vg-parameteredit.js  vg-terminal.js
vglib/render/: vg-camera.js  vg-import.js  vg-light.js  vg-material.js  vg-mesh.js  vg-pipeline.js  vg-scene.js
vglib/shaders/: vg-renderortho.fs  vg-renderortho.js
vglib/tracer/: vg-algebra.cpp  vg-bindings.cpp  vg-material.cpp  vg-objects.cpp  vg-tracer.cpp
vglib/ui/: richtext.js  vg-coderoom.js  vg-defines.js  vg-dockwidget.js  vg-htmlview.js  vg-htmlwidget.js  vg-iconwidget.js  vg-layout.js  vg-listwidget.js  vg-menu.js  vg-numericalwidgets.js  vg-richtext.js  vg-scroller.js  vg-tablewidget.js  vg-textwidgets.js  vg-toolbar.js  vg-toolpanel.js  vg-treewidget.js  vg-widgets.js  vg-window.js  vg-workspace.js  vg-workspace_dialogs.js
vglib/ui/ace/: vg-ace_ext_searchbox.js  vg-ace_mode_glsl.js  vg-ace_mode_javascript.js  vg-ace_theme_monokai.js
vglib/ui/styles/multimedia/: vg-style.js
vglib/utils/: typeface-0.15.js  vg-compressor.js  vg-utils.js
web/: typeface-0.15.js  vg-dialogs.js  vg-system.js  vg-webgl.js  visualgraphics.js  visualgraphics_app.js  worker-javascript.js
web/lib/: webgl-utils.js
(+7 files in other folders)
